--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UN TITULO PARA EL TITULO QUE NO TIENE!</title>
+    <title> ⚠️ UN TITULO PARA EL TITULO QUE NO TIENE!</title>
     <style>
         * {
             margin: 0;
@@ -204,7 +204,7 @@
             </div>
 
             <!-- AQUÍ ESTÁ TU ENLACE ACTUAL -->
-            <a href="https://drive.google.com/uc?export=download&id=1ahEKAobza7_XEDTogCq4OciT-kDIjy8Y" 
+            <a href="https://youtu.be/UT7kGI-CnOQ" 
                class="video-link pulse" 
                target="_blank">
                 Descargar Video
@@ -252,3 +252,4 @@
     </script>
 </body>
 </html>
+
