--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="icon">📥</div>
+            <div class="icon">⚽</div>
             <h1>¡Contenido Listo!</h1>
-            <p class="subtitle">Tu video de Neymar Skills Insanas 9999% imposibles está preparado para descargar</p>
+            <p class="subtitle">Tu video de Neymar Skills Insanas 9999% Imposibles  está preparado para descargar</p>
         </div>
 
         <div class="download-box">
             <div class="download-warning">
-                ⚠️ Este enlace descargará el video a tu dispositivo
+                ⚠️ Este botón descargará el video a tu dispositivo
             </div>
             
             <div class="file-info">
@@ -215,14 +215,13 @@
             <h3>✨ Instrucciones:</h3>
             <ul>
                 <li>Haz clic en el botón verde</li>
-                <li>Espera a que comience la descarga</li>
-                <li>Abre el archivo desde tu dispositivo</li>
+                <li>Una vez hecho eso, lo va a estar descargando</li>
                 <li>¡Disfruta del contenido!</li>
             </ul>
         </div>
 
         <div class="footer">
-            <p>¿Problemas con la descarga? Verifica tu conexión a internet 📡</p>
+            <p>¿Problemas con la descarga? No es peo mio Crack 😉</p>
         </div>
     </div>
 
@@ -252,4 +251,5 @@
     </script>
 </body>
 </html>
+
 
